@startuml classes 
class Usuario{
    - nome : str
    - senha : str

    validar_usuario(): bool
}
class Membro{
    - nome : str
    - data_nascimento : date
    - email : str 
    - cpf : str
    - data_cadastro : date 
    + maior_de_idade(): bool 
    + validar_cpf(): bool 

}
class BancoDeDados{
    + nome_banco : str
    + conector : Connection

    + conectar() : void 
    + criar_tabela_membros() : void 
    + cadastrar_membro() : void 
    + buscar_todos_membros() : list 
    + editar_membro() : void 
    + remover_membro() : void 
    + fechar_conexao() : void
}

class Tela_Login{
    login_usuario()
}
class Tela_principal{
    cadastrar_membro()
    editar_membro() 
    remover_membro() 
    tela_relatorios() 
}
class Tela_Relatorios{
        buscar_todos_membros()

}
Tela_Login --> Usuario : manipula
BancoDeDados --> Membro : manipula
Tela_Login --> Tela_principal : pós validação
Tela_principal --> Tela_Relatorios : tela_relatorios()
@enduml